--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
   "homepage": "https://github.com/frasten/cataloghetor#readme",
   "devDependencies": {
     "electron-prebuilt": "^0.37.0"
+  },
+  "dependencies": {
+    "sqlite3": "^3.1.3"
   }
 }
